DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Feb-25-2010 patrick     Added vrj::osg::AppViewer, a VR Juggler application
                        class that interacts with osgViewer.
                        Submitted by Christian Noon.
                        NEW VERSION: 2.3.19
Apr-19-2009 patrick     Updated for Gadgeteer 1.3.22.
                        NEW VERSION: 2.3.18
Mar-31-2009 patrick     Added support for creating OpenGL 3.0 contexts using
                        GLX and WGL. Submitted by Todd Furlong.
                        NEW VERSION: 2.3.17
Nov-18-2007 patrick     Updated for Gadgeteer 1.3.15. Now, Cocoa OpenGL windows
                        update their input area size correctly.
                        NEW VERSION: 2.3.16
Sep-26-2007 patrick     Fixed crash-on-exit problems with Sonix.
                        NEW VERSION: 2.3.15
Sep-19-2007 patrick     Added draw thread CPU affinity capabilities through the
                        new environment variable VJ_DRAW_THREAD_AFFINITY. This
                        is currently used only by the OpenGL Draw Manager.
                        NEW VERSION: 2.3.14
Sep-09-2007 patrick     Added vrjuggler-direct3d fpc file.
Sep-07-2007 dshipton    Added vrjuggler-opengl and vrjuggler-performer fpc
                        files for easier Draw Manager selection by application
                        builds.
Sep-04-2007 patrick     Use new environment variable VJ_DATA_DIR as a way to
                        look up files in VJ_BASE_DIR/share/vrjuggler.
                        NEW VERSION: 2.3.13
Sep-04-2007 patrick     Set VJ_BASE_DIR automatically on all platforms.
Aug-25-2007 patrick     Changed the return type of the virtual method
                        vrj::osg::App::getSceneViewDefaults() from
                        osgUtil::SceneView::Options to unsigned int to fix
                        compile errors.